<resources>
    <string name="app_name">AppBd</string>
    <string name="text_login">Login</string>
    <string name="txt_botao_login">Login</string>
    <string name="text_title_login">Faça o login</string>
    <string name="text_users">Usuários</string>
    <string name="text_list_users">Lista de Usuários</string>
    <string name="title_menu_ok">Salvar</string>
    <string name="title_menu_cancel">Voltar</string>
    <string name="telefone_text">Telefone</string>
    <string name="email_text">Email</string>
    <string name="senha_text">Senha</string>
    <string name="excluir_text">Excluir</string>
</resources>