<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".view.UsuarioActivity">

    <TextView
        android:id="@+id/lblIdUsuario_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LabelBold"
        android:text="ID"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LabelBold"
        android:text="@string/text_login" />
    
    <EditText
        android:id="@+id/txtLogin_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LabelBold"
        android:text="@string/senha_text" />

    <EditText
        android:id="@+id/txtSenha_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LabelBold"
        android:text="@string/email_text"/>

    <EditText
        android:id="@+id/txtEmail_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LabelBold"
        android:text="@string/telefone_text"/>

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/txtTelefone_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        app:allowed_chars="1234567890"
        app:mask="(##) #####-####" />

    <Button
        android:id="@+id/btnExcluir_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excluir_text"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        style="@style/BotaoVermelho"/>


</LinearLayout>